--- a/CoolBlog/templates/home/index.html
+++ b/CoolBlog/templates/home/index.html
@@ -112,7 +112,7 @@
   <span class="comments-top" itemprop="interactionCount">评论：<a itemprop="discussionUrl" href="/PENETRATION/php-cgi-cve-2012-1823.html#reply-list">0条评论</a></span>
   <span class="comments-top" itemprop="interactionCount">浏览：<a itemprop="discussionUrl" href="/PENETRATION/php-cgi-cve-2012-1823.html">{{article.views}}人看过</a></span>
   <span class="date">标签:
-        {% for tag in post.tags.all %}
+        {% for tag in article.tags.all %}
         <a href="/tag/php-cgi">{{tag.name}}</a>
         {% endfor %}
   </span>
