--- a/CoolBlog/templates/home/article.html
+++ b/CoolBlog/templates/home/article.html
@@ -1,4 +1,4 @@
-﻿{% extends 'home\base.html' %}
+﻿{% extends 'home/base.html' %}
 {% load staticfiles %}
 {% load home_tags %}
 {% block title %}{{ article.title}}{%endblock%}
