--- a/CoolBlog/templates/home/article_search_list.html
+++ b/CoolBlog/templates/home/article_search_list.html
@@ -1,4 +1,4 @@
-{% extends 'home\base.html' %}
+{% extends 'home/base.html' %}
 {% load staticfiles %}
 {% load home_tags %}
 {% block title %}文章列表 | 离别歌{%endblock%}
