--- a/CoolBlog/templates/home/index.html
+++ b/CoolBlog/templates/home/index.html
@@ -1,4 +1,4 @@
-﻿{% extends 'home\base.html' %}
+﻿{% extends 'home/base.html' %}
 {% load staticfiles %}
 {% load home_tags %}
 {% block title %}首页 | 离别歌{%endblock%}
